src/components/layout/AppLayout.module.css
.layout {
  display: grid;
  grid-template-rows: 35px 1fr 22px;
  height: 100vh;
  overflow: hidden;
}

.workbench {
  display: flex;
  flex-direction: row;
  overflow: hidden;
  flex: 1;
  min-height: 0;
}

.rightColumn {
  flex: 1;
  display: flex;
  flex-direction: column;
  min-width: 0;
  min-height: 0;
  overflow: hidden;
}

